<resources>
    <string name="app_name">HikeWise</string>
    <string name="logo_name">HikeWise</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="full_name"> Full Name</string>
    <string name="password">Password</string>
    <string name="user_email">Email</string>
    <string name="passwordHint">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_weather">Cek cuaca untuk memulai pendakianmu dan prediksi kedepannya</string>
    <string name="from_weather">From</string>
    <string name="to_weather">To</string>
    <string name="process">Process</string>
    <string name="article_name">Article Name</string>
    <string name="sumber">Sumber</string>
    <string name="mountain_name">Mountain Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="ketinggian">Ketinggian</string>
    <string name="status">Status</string>
    <string name="desc_mountain">Lorem ipsum dolor sit amet consectetur. Vitae tortor magna quisque nisl magna. Malesuada quam arcu eget sociis. Sed sollicitudin a sit nam tristique arcu. Pharetra erat non massa feugiat pellentesque. Tempus eget est vitae sed quam nunc at nunc. In pellentesque nulla facilisi eu pulvinar suscipit placerat interdum. Fusce non mi nunc at malesuada malesuada ut. Elementum augue a feugiat molestie sapien. Amet habitasse fusce commodo dui. Eleifend arcu lobortis nisl gravida nibh rhoncus sapien justo imperdiet. Senectus sed sed proin a curabitur ut mauris euismod velit.</string>
    <string name="count_mountain">Rp. 50.0000</string>
    <string name="desc_article">Lorem ipsum dolor sit amet consectetur. Vitae tortor magna quisque nisl magna. Malesuada quam arcu eget sociis. Sed sollicitudin a sit nam tristique arcu. Pharetra erat non massa feugiat pellentesque. Tempus eget est vitae sed quam nunc at nunc. In pellentesque nulla facilisi eu pulvinar suscipit placerat interdum. Fusce non mi nunc at malesuada malesuada ut. Elementum augue a feugiat molestie sapien. Amet habitasse fusce commodo dui. Eleifend arcu lobortis nisl gravida nibh rhoncus sapien justo imperdiet. Senectus sed sed proin a curabitur ut mauris euismod velit.</string>
    <string name="search">Search</string>
    <string name="article">Article</string>
    <string name="check_equipment">Check Equipment</string>
    <string name="tagline_equip">Please check your equipment before hiking</string>
    <string name="check_health">Check Health</string>
    <string name="tagline_health">Please check your health before hiking</string>
    <string name="desc_equip">Sebelum melakukan pendakian, cek dulu yaa perlengkapannya untuk keselamatan selama pendakian. :) Selamat mendaki !</string>
    <string name="desc_health">Sebelum melakukan pendakian, cek dulu yaa kesehatannya untuk keselamatan selama pendakian. :) Selamat mendaki !</string>
    <string name="next">Next</string>
    <string name="subtitle_welcome">Jadilah pendaki yang bijaksana</string>
    <string name="big_title">Let\'s go hiking with HikeWise</string>
    <string name="explore">Explore</string>
    <string name="subtitle_article">Subtitle article</string>
    <string name="address">Address</string>
    <string name="mountain">Mountain</string>
    <string name="price">Price</string>
    <string name="success">Success</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="quetion_booking">Jadwalkan pendakianmu dari sekarang dan nikmati liburanmu bersama teman-teman.</string>
    <string name="booking">Booking</string>
    <string name="booking_hiking">Booking Hiking</string>
    <string name="check_up">Check Up</string>
    <string name="day">Day</string>
    <string name="user">User</string>
    <string name="hello_there">Hello there !</string>
    <string name="image">Image Processing</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="question_health">Question Health</string>
    <string name="equipment">Equipment</string>
    <string name="is_ready">Is Ready</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="result_health">Wah kesehatanmu sudah siap untuk mendaki , jaga kesehatan ya supaya pendakiannya lancar dan selamat.</string>
    <string name="result_equip">Result Equipment</string>
    <string name="kota">Jakarta</string>
    <string name="cuaca">Cerah</string>
    <string name="hiking">Hiking</string>
    <string name="trip">Open Trip</string>
    <string name="alat">Alat</string>
    <string name="alat_camping">Alat Camping</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="history_transaction">History Transaction</string>
    <string name="trip_name">Trip Name</string>
    <string name="open_trip_name">Open Trip Name</string>
    <string name="booking_trip">Booking Trip</string>
    <string name="detail_alat">Detail Alat</string>
    <string name="delete">Delete</string>
    <string name="detail_hiking">Detail Hiking</string>
    <string name="note">Note :\nCapture peralatan pendakianmu dan cek seberapa lengkap peralatan pendakianmu yang sudah siap, alat-alat yang bisa kamu cek yaitu :\n
- Air Mineral\n
- Alat penerangan\n
- Jaket\n
- Jas Hujan\n
- Kompas\n
- Matras\n
- P3K\n
- Sepatu\n
- Sleeping Bag\n
- Tas\n
- Tenda\n
- Trash Bag\n
</string>
</resources>