<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.checkup.ImageProcessActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/image"
            app:titleTextAppearance="@style/MyToolbarTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/image_process"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clipToOutline="true"
        android:background="@drawable/border2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutImage"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="244dp"
            android:clipToOutline="true"
            android:src="@drawable/ic_image" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="@+id/image_process"
        tools:alpha="1" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:layout_marginTop="27dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/image_process"
        app:layout_constraintTop_toBottomOf="@+id/image_process"
        tools:alpha="1" />

    <Button
        android:id="@+id/btnProcess"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/process"
        android:fontFamily="@font/poppins_medium"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>