<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    android:layout_marginTop="10dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="false"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView_mountain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_mountain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/mountain_name"
            android:maxLines="1"
            android:textSize="18sp"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@+id/date_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/date"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/name_mountain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_mountain" />

        <TextView
            android:id="@+id/price_mountain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/price"
            android:textColor="@color/primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_mountain"
            app:layout_constraintTop_toBottomOf="@+id/name_mountain" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/baseline_check_circle_24"
            app:layout_constraintBottom_toBottomOf="@+id/price_mountain"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/price_mountain" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/success"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/date_time"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
